add Instance UID, version, and storage size;
